--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,15 @@
         <%= link_to 'Log out', destroy_user_session_path, method: :delete %> |
         <% if current_user && current_user.profile.empty? %>
           <%= link_to 'Create a Profile', new_user_profile_path(current_user) %>
-        <% elsif current_user.profile %>
+        <% elsif !current_user.profile.empty? %>
           <%= link_to 'View Your Profile', user_profile_path(current_user.id, current_user.profile) %> |
           <%= link_to 'Edit Your Profile', edit_user_profile_path(current_user.id, current_user.profile) %> |
         <% end %>
         <p> Settings </p>
         <ul>
-          <li><%= link_to 'Delete My Profile', user_profile_path(current_user.id, current_user.profile), method: :delete %> </li>
+          <% if !current_user.profile.empty? %>
+            <li><%= link_to 'Delete My Profile', user_profile_path(current_user.id, current_user.profile), method: :delete %> </li>
+          <% end %>
           <li><%= link_to 'Cancel My Account', edit_user_registration_path(current_user) %> </li>
         </ul>
       <% else %>
