--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
           <%= link_to 'View Your Profile', user_profile_path(current_user.id, current_user.profile) %> |
           <%= link_to 'Edit Your Profile', edit_user_profile_path(current_user.id, current_user.profile) %> |
         <% end %>
+          <%= link_to 'Your Recipes', user_recipes_path(current_user)%>
         <p> Settings </p>
         <ul>
           <% if !current_user.profile.empty? %>
