--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,5 +1,10 @@
 <h1><%= @header %></h1>
 
+<div class="recipe-permissions">
+  <%= link_to "Edit", edit_recipe_path(@recipe) %> |
+  <%= link_to "Remove", user_recipe_path(@recipe), method: :delete%>
+</div>
+
 <div class="recipe-container">
   <div class="recipe-description">
     <p><%= @recipe.description %></p>
