--- a/app/views/recipes/_recipe_form.html.erb
+++ b/app/views/recipes/_recipe_form.html.erb
@@ -1,22 +1,42 @@
 <%= form_for @recipe do |f| %>
 
-  <%= f.label :name %><br>
-  <%=f.text_field :name %><br><br>
+<div class="row">
+  <div class="small-2 medium-4 large-8 columns">
+    <%= f.label :name %>
+    <%=f.text_field :name %><br>
+  </div>
+</div>
 
-  <%= f.label :description %><br>
-  <%= f.text_area :description %><br><br>
+<div class="row">
+    <div class="small-2 medium-4 large-8 columns">
+      <%= f.label :description %>
+      <%= f.text_area :description %><br><br>
+    </div>
+  </div>
 
-  <%= f.label :minutes %><br>
-  <%= f.select(:minutes, options_for_select(@minutes_collection, selected: recipe.minutes)) %><br><br>
+    <div class="row">
+      <div class="large-2 columns">
+        <%= f.label :minutes %><br>
+        <%= f.select(:minutes, options_for_select(@minutes_collection, selected: recipe.minutes)) %>
+      </div>
+      <div class="small-3 columns">
+        <div class-"row collapse">
+          <%= f.label :hours %><br>
+          <%= f.select(:hours, options_for_select(@hours_collection, selected: recipe.hours)) %>
+        </div>
+      </div>
+    </div>
+  <br><br><br><br><br>
 
-  <%= f.label :hours %><br>
-  <%= f.select(:hours, options_for_select(@hours_collection, selected: recipe.hours)) %><br><br>
+  <div class="row">
+    <div class="">
+      <%= f.label :photo, "Upload Photo File:"%><br>
+      <%= f.file_field :photo %><br><br>
 
-  <%= f.label :photo, "Upload Photo File:"%><br>
-  <%= f.file_field :photo %><br><br>
-
-  <%= f.label :video, "Upload Video File:"%><br>
-  <%= f.file_field :video %><br><br>
+      <%= f.label :video, "Upload Video File:"%><br>
+      <%= f.file_field :video %><br><br>
+    </div>
+  </div>
 
   <%= f.submit "Add Recipe"%><br><br>
 
