--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -4,7 +4,7 @@
 
 
 <% if @recipes.empty? %>
-  <p>You're recipe book is empty. Click '<em>Add Recipe</em>' to get started!</p>
+  <p>You're recipe book is empty. Click '<em>Add Custom Recipe</em>' to get started!</p>
 <% else %>
     <div id="recipe-index">
     </div>
