begins react display of API results

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
      <% end %>
      <%= link_to 'Your Recipes', user_recipes_path(current_user)%> |
      <%= link_to 'Add Custom Recipe', new_user_recipe_path(current_user)%> |
-     <%= link_to 'Browse', browse_course_path %> |
+     <%= link_to 'Browse', browse_breakfast_path %> |
       <div class="dropdown">
           <a class="dropbtn"><i class="fa fa-cogs"></i>Account Options</a>
           <div class="dropdown-content">
