--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,7 +1,9 @@
 <div class="splash">
   <h1 class="name"><%=@name%></h1>
 
-  <h4 class="email"><%=@email%></h4>
-  <h4 class="git"><%=@github%></h4>
-  <h4 class="linkedin"><%=@linked_in%></h4>
+  <div class="contact-links">
+    <h4 class="email"><i class="fa fa-envelope-o"></i><%=@email%></h4>
+    <h4 class="github"><i class="fa fa-github"></i><%=@github%></h4>
+    <h4 class="linked-in"><i class="fa fa-linkedin-square"></i><%=@linked_in%></h4>
+  </div>
 </div>
