--- a/app/assets/stylesheets/welcome/show.scss
+++ b/app/assets/stylesheets/welcome/show.scss
@@ -1,20 +1,19 @@
-.body {
-  background-color: #cccccc;
-}
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 
 .splash {
-  margin: 30%;
-  text-align: center;
+ margin-top: 150px;
 }
 
-.email {
-
+.splash h1 {
+ font-size: 90px;
 }
 
-.git {
-
+.contact-links {
+ text-align: left;
+ padding-left: 110px;
 }
 
-.linkedin {
-
+.contact-links h4  {
+ font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+ font-weight: 200;
 }
