begin reactive recipe instructions

--- a/app/views/profiles/_about_me_form.html.erb
+++ b/app/views/profiles/_about_me_form.html.erb
@@ -11,7 +11,8 @@
     <% end %>
   </div>
 
-  <%=f.label :about_me, "About Me" %><br>
+  <div class="about-me"
+      <%=f.label :about_me, "About Me" %><br>
      <%=f.text_area :about_me %><br>
    </div>
 
