--- a/app/assets/stylesheets/profiles/new.scss
+++ b/app/assets/stylesheets/profiles/new.scss
@@ -1,3 +1,7 @@
+.profile-header h1 {
+  margin-top: 0%;
+}
+
 .profile-starter {
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 }
@@ -24,7 +28,7 @@
   margin-left:  10px;
 }
 
-.profile-form, .actions {
+.about-me, .actions {
   margin-left: 15%;
   margin-right: 15%;
 }
