--- a/app/assets/stylesheets/welcome/index.scss
+++ b/app/assets/stylesheets/welcome/index.scss
@@ -20,7 +20,10 @@ body.welcome {
  .user-list {
    margin-left: 30%;
    margin-right: 30%;
-   padding: 10px;
+   padding-left: 10px;
+   padding-right: 10px;
+   padding-top: 10px;
+   padding-bottom: 10px;
    background-color: #ECE9BE;
    display: block;
  }
