--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,9 @@
 <% if current_user && @profile.user == current_user %>
-  <h2>A little bit about <%= current_user.first_name %>,</h2>
-  <p><%= @profile.about_me %></p>
+  <div class="profile-header">
+    <h2>A little bit about <%= current_user.first_name %>,</h2>
+  </div>
+
+  <div class="user-blurb">
+    <p><%= @profile.about_me %></p>
+  </div>
 <% end %>
