--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -19,6 +19,28 @@
     <p><%= @recipe.photo %></p>
   </div>
 
-  <div id="recipe-instructions">
+  <div class="instruction-directory">
+    <% if @instructions.empty? %>
+      <p>Add some instructions!</p><br>
+    <% end %>
+  </div>
+
+  <div class="instruction-block">
+    <button>+ New Step</button>
+    <br><br>
+    <div id="instruction-form" style="display: none">
+      <%= render 'instructions/instruct_form' %>
+    </div><br><br>
+
+    <div class="recipe-instructions">
+      <% if @instructions.any? %>
+      <p>How To</p>
+      <ul>
+        <% @instructions.each do |i| %>
+          <li><%= i.step %> <%= link_to "-", recipe_instruction_path(@recipe, i), method: :delete%></li>
+        <% end %>
+      </ul>
+      <% end %>
+    </div>
   </div>
 </div>
