--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,6 +50,7 @@
 
  /* Dropdown Content (Hidden by Default) */
  .dropdown-content {
+   z-index: 1000;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
