--- a/app/assets/stylesheets/recipes/show.scss
+++ b/app/assets/stylesheets/recipes/show.scss
@@ -25,6 +25,7 @@
   margin: 0 auto;
   padding: 6px 5px 4px 5px;
   position: relative;
+  z-index: -1;
   color: #444;
   line-height: 20px;
   border: 1px solid #d2d2d2;
