--- a/app/assets/stylesheets/welcome/index.scss
+++ b/app/assets/stylesheets/welcome/index.scss
@@ -5,6 +5,7 @@
   margin-left: 0px;
   margin-right: 0px;
   top: 0;
+  z-index: 0;
 }
 
 body.welcome {
@@ -18,6 +19,7 @@ body.welcome {
  }
 
  .user-list {
+   z-index: -1;
    margin-left: 30%;
    margin-right: 30%;
    padding: 10px;
