--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -19,9 +19,11 @@
   <p><%= @recipe.photo %></p>
 </div>
 
-<div class="instruction-directory">
+<div class="data-directory">
   <% if @instructions.empty? %>
     <p>Add some instructions!</p><br>
+  <% elsif @ingredients.empty? %>
+    <p>Add some ingredients!</p><br>
   <% end %>
 </div>
 
@@ -46,11 +48,23 @@
   <p>Ingredients</p>
   <ul>
     <% @ingredients.each do |ing| %>
-    <li>(<%= ing.volume1 %> <%= ing.volume2 %>) <%= ing.unit %>
-      <%= ing.food_item %>
-      <%= link_to "-", recipe_ingredient_path(@recipe, ing),
-      method: :delete%></li>
+      <% if ing.volume1 == "0" && ing.volume2 != "0" %>
+        <li> <%= ing.volume2 %> <%= ing.unit %> -
+          <%= ing.food_item %>
+          <%= link_to "-", recipe_ingredient_path(@recipe, ing),
+          method: :delete%></li>
+      <% elsif ing.volume1 != "0" && ing.volume2 == "0" %>
+        <li> <%= ing.volume1 %> <%= ing.unit %> -
+          <%= ing.food_item %>
+          <%= link_to "-", recipe_ingredient_path(@recipe, ing),
+        method: :delete%></li>
+      <% elsif ing.volume1 != "0" && ing.volume2 != "0" %>
+        <li> <%= ing.volume1 %> <%= ing.volume2 %> <%= ing.unit %> -
+          <%= ing.food_item %>
+          <%= link_to "-", recipe_ingredient_path(@recipe, ing),
+        method: :delete%></li>
       <% end %>
+    <% end %>
     </ul>
     <% end %>
   </div>
