--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@
  .top-bar {
    margin: 0;
    padding: 10px;
-   background-color: #D6ABB1;
+   background-color: #E1C9CF;
    position: fixed;
    top: 0px;
    width: 100%;
@@ -50,13 +50,12 @@
 
  /* Dropdown Content (Hidden by Default) */
  .dropdown-content {
-   z-index: 1000;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-
+  z-index: 2;
  }
 
  /* Links inside the dropdown */
@@ -81,5 +80,5 @@
 
  /* Change the background color of the dropdown button when the dropdown content is shown */
  .dropdown:hover .dropbtn {
-     background-color: #D6ABB1;
+     background-color: #E1C9CF;
  }
