--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,4 +1,6 @@
-<h1><%= @header %></h1>
+<div class="recipe-header">
+  <h1><%= @header %></h1>
+</div>
 
 <div class="recipe-permissions">
   <%= link_to "Edit", edit_recipe_path(@recipe) %> |
@@ -27,45 +29,47 @@
   <% end %>
 </div>
 
-<div class="instruction-form">
-  <a href="#" class="instruction-toggle">+ New Step</a>
-  <br><br>
-  <div id="instruction-form" style="display: none">
-    <%= render 'instructions/instruct_form' %>
-  </div><br>
-</div>
-
-<div class="ingredient-form">
-  <a href="#" class="ingredient-toggle">+ New Ingredient</a>
-  <br><br>
-  <div id="ingredient-form" style="display: none">
-    <%= render 'ingredients/ingredient_form' %>
-  </div><br>
+<div class="form-container">
+  <div class="ingredient-form">
+    <a href="#" class="ingredient-toggle">+ New Ingredient</a>
+    <br><br>
+    <div id="ingredient-form" style="display: none">
+      <%= render 'ingredients/ingredient_form' %>
+    </div><br><br>
+  </div>
+  
+  <div class="instruction-form">
+    <a href="#" class="instruction-toggle">+ New Step</a>
+    <br><br>
+    <div id="instruction-form" style="display: none">
+      <%= render 'instructions/instruct_form' %>
+    </div><br>
+  </div>
 </div>
 
 <div class="recipe-ingredients">
   <% if @ingredients.any? %>
-  <p>Ingredients</p>
-  <ul>
-    <% @ingredients.each do |ing| %>
-      <% if ing.volume1 == "0" && ing.volume2 != "0" %>
-        <li> <%= ing.volume2 %> <%= ing.unit %> -
-          <%= ing.food_item %>
-          <%= link_to "-", recipe_ingredient_path(@recipe, ing),
+    <p>Ingredients</p>
+    <ul>
+      <% @ingredients.each do |ing| %>
+        <% if ing.volume1 == "0" && ing.volume2 != "0" %>
+          <li><i class="fa fa-angle-right"></i> <%= ing.volume2 %> <%= ing.unit %> -
+            <%= ing.food_item %>
+            <%= link_to "-", recipe_ingredient_path(@recipe, ing),
+            method: :delete%></li>
+        <% elsif ing.volume1 != "0" && ing.volume2 == "0" %>
+          <li><i class="fa fa-angle-right"></i> <%= ing.volume1 %> <%= ing.unit %> -
+            <%= ing.food_item %>
+            <%= link_to "-", recipe_ingredient_path(@recipe, ing),
           method: :delete%></li>
-      <% elsif ing.volume1 != "0" && ing.volume2 == "0" %>
-        <li> <%= ing.volume1 %> <%= ing.unit %> -
-          <%= ing.food_item %>
-          <%= link_to "-", recipe_ingredient_path(@recipe, ing),
-        method: :delete%></li>
-      <% elsif ing.volume1 != "0" && ing.volume2 != "0" %>
-        <li> <%= ing.volume1 %> <%= ing.volume2 %> <%= ing.unit %> -
-          <%= ing.food_item %>
-          <%= link_to "-", recipe_ingredient_path(@recipe, ing),
-        method: :delete%></li>
+        <% elsif ing.volume1 != "0" && ing.volume2 != "0" %>
+          <li><i class="fa fa-angle-right"></i> <%= ing.volume1 %> <%= ing.volume2 %> <%= ing.unit %> -
+            <%= ing.food_item %>
+            <%= link_to "-", recipe_ingredient_path(@recipe, ing),
+          method: :delete%></li>
+        <% end %>
       <% end %>
-    <% end %>
-    </ul>
+      </ul>
     <% end %>
   </div>
 
