--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,13 +1,16 @@
+<div class="recipe-banner">
+</div>
+
 <div class="recipe-header">
   <h1><%= @header %></h1>
 </div>
 
-<div class="recipe-permissions">
-  <%= link_to "Edit", edit_recipe_path(@recipe) %> |
-  <%= link_to "Remove", user_recipe_path(@recipe), method: :delete%>
-</div>
 
 <div class="recipe-container">
+  <div class="recipe-permissions">
+    <%= link_to "Edit", edit_recipe_path(@recipe) %> |
+    <%= link_to "Remove", user_recipe_path(@recipe), method: :delete%>
+  </div>
   <div class="recipe-time">
 </div>
 
@@ -29,6 +32,8 @@
   <% end %>
 </div>
 
+<br>
+
 <div class="form-container">
   <div class="ingredient-form">
     <a href="#" class="ingredient-toggle">+ New Ingredient</a>
@@ -37,7 +42,7 @@
       <%= render 'ingredients/ingredient_form' %>
     </div><br><br>
   </div>
-  
+
   <div class="instruction-form">
     <a href="#" class="instruction-toggle">+ New Step</a>
     <br><br>
@@ -47,42 +52,45 @@
   </div>
 </div>
 
-<div class="recipe-ingredients">
-  <% if @ingredients.any? %>
-    <p>Ingredients</p>
-    <ul>
-      <% @ingredients.each do |ing| %>
-        <% if ing.volume1 == "0" && ing.volume2 != "0" %>
-          <li><i class="fa fa-angle-right"></i> <%= ing.volume2 %> <%= ing.unit %> -
-            <%= ing.food_item %>
-            <%= link_to "-", recipe_ingredient_path(@recipe, ing),
+<div class="recipe-content">
+  <div class="recipe-ingredients">
+    <% if @ingredients.any? %>
+      <p>Ingredients</p>
+      <ul>
+        <% @ingredients.each do |ing| %>
+          <% if ing.volume1 == "0" && ing.volume2 != "0" %>
+            <li><i class="fa fa-angle-right"></i> <%= ing.volume2 %> <%= ing.unit %> -
+              <%= ing.food_item %>
+              <%= link_to "-", recipe_ingredient_path(@recipe, ing),
+              method: :delete%></li>
+          <% elsif ing.volume1 != "0" && ing.volume2 == "0" %>
+            <li><i class="fa fa-angle-right"></i> <%= ing.volume1 %> <%= ing.unit %> -
+              <%= ing.food_item %>
+              <%= link_to "-", recipe_ingredient_path(@recipe, ing),
             method: :delete%></li>
-        <% elsif ing.volume1 != "0" && ing.volume2 == "0" %>
-          <li><i class="fa fa-angle-right"></i> <%= ing.volume1 %> <%= ing.unit %> -
-            <%= ing.food_item %>
-            <%= link_to "-", recipe_ingredient_path(@recipe, ing),
-          method: :delete%></li>
-        <% elsif ing.volume1 != "0" && ing.volume2 != "0" %>
-          <li><i class="fa fa-angle-right"></i> <%= ing.volume1 %> <%= ing.volume2 %> <%= ing.unit %> -
-            <%= ing.food_item %>
-            <%= link_to "-", recipe_ingredient_path(@recipe, ing),
-          method: :delete%></li>
+          <% elsif ing.volume1 != "0" && ing.volume2 != "0" %>
+            <li><i class="fa fa-angle-right"></i> <%= ing.volume1 %> <%= ing.volume2 %> <%= ing.unit %> -
+              <%= ing.food_item %>
+              <%= link_to "-", recipe_ingredient_path(@recipe, ing),
+            method: :delete%></li>
+          <% end %>
         <% end %>
-      <% end %>
       </ul>
     <% end %>
   </div>
 
-  <div class="recipe-instructions">
-    <% if @instructions.any? %>
-      <p>How To</p>
-      <ul>
-        <% @instructions.each do |i| %>
-          <li><%= i.step %> <%= link_to "-", recipe_instruction_path(@recipe, i), method: :delete%></li>
-        <% end %>
-      </ul><br><br>
-    <% end %>
-  </div>
+    <div class="recipe-instructions">
+      <% if @instructions.any? %>
+        <p>How To</p>
+        <ul>
+          <% @instructions.each do |i| %>
+            <li><%= i.step %> <%= link_to "-", recipe_instruction_path(@recipe, i), method: :delete%></li>
+          <% end %>
+        </ul><br><br>
+      <% end %>
+    </div>
+</div>
+
 
 
   </div>
