--- a/app/views/instructions/_instruct_form.html.erb
+++ b/app/views/instructions/_instruct_form.html.erb
@@ -17,7 +17,7 @@
       <%= f.text_field :step %>
     </div><br><br>
 
-    <div class="small-1 medium-1 large-1 columns">
+    <div class="save">
       <%= f.submit '+'%><br><br>
     </div>
   </div>
