--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -19,6 +19,7 @@
     <p><%= @recipe.photo %></p>
   </div>
 
+  <div id='recipe-id' style="display:none"><%= @recipe.id %></div>
   <div id="recipe-instructions">
   </div>
 </div>
