completed instruction react

--- a/app/assets/stylesheets/recipes/show.scss
+++ b/app/assets/stylesheets/recipes/show.scss
@@ -79,7 +79,7 @@
   font-weight: 200;
 }
 .form-container {
-  margin-left: 5%;
+  // margin-left: 5%;
 }
 .ingredient-form {
   // margin-top: 10%;
