begins reactive ingredient list

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -43,7 +43,7 @@
 
 
 <div class="recipe-content">
-  <div class="recipe-ingredients">
+  <div id="recipe-ingredients">
     <% if @ingredients.any? %>
       <p>Ingredients</p>
       <ul>
