--- a/app/assets/stylesheets/recipes/show.scss
+++ b/app/assets/stylesheets/recipes/show.scss
@@ -106,7 +106,7 @@
   margin: 12px;
   margin-top: 0px;
   float: left;
-  width: 40%;
+  width: 60%;
   height: auto;
   text-align: justify;
   color: black;
@@ -124,7 +124,7 @@
   padding-left: 10%;
   // margin-bottom: 20%;
   margin-left: 0px;
-  margin-right: 40px;
+  // margin-right: 40px;
   text-align: justify;
 }
 
