--- a/app/assets/stylesheets/recipes/index.scss
+++ b/app/assets/stylesheets/recipes/index.scss
@@ -24,9 +24,13 @@ h1 {
   padding-left: 0;
 }
 
-.pagination ul{
+.pagination ul {
+  margin-left: 43%;
+}
+
+.pagination a {
   display: inline;
-  margin-left: 45%;
+  margin-left: 5px;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: 200;
 }
@@ -44,4 +48,4 @@ h1 {
   width: 20px;
 }
 
-.page-number:hover { transform: scale(2.1); }
+.page-number:hover { transform: scale(3.1); }
