corrects spacing for input fields

--- a/app/assets/stylesheets/profiles/show.scss
+++ b/app/assets/stylesheets/profiles/show.scss
@@ -1,5 +1,5 @@
 .profile-header h2 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: Raleway;
   text-align: center;
   margin: 5%;
   font-weight: 200;
@@ -9,7 +9,7 @@
 }
 
 .user-blurb {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: Raleway;
   font-weight: 200;
   margin-left: 45%;
   margin-top: 12%;
