--- a/app/assets/stylesheets/recipes/index.scss
+++ b/app/assets/stylesheets/recipes/index.scss
@@ -31,12 +31,12 @@ h1 {
 .pagination a {
   display: inline;
   margin-left: 5px;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: Raleway;
   font-weight: 200;
 }
 .pagination p{
   margin-left: 44%;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: Raleway;
   font-weight: 200;
   font-size: 20px
 }
