--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,12 @@
 //= require foundation_and_overrides
 
  */
+
+ @import url(https://fonts.googleapis.com/css?family=Raleway);
+
  body {
    margin-top: 70px;
+   background-color: #FCFCFC;
  }
 
  .notice {
@@ -44,7 +48,7 @@
 
  /* The container <div> - needed to position the dropdown content */
  .dropdown {
-    font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+    font-family: Raleway;
      position: relative;
      display: inline-block;
  }
