--- a/app/assets/stylesheets/profiles/new.scss
+++ b/app/assets/stylesheets/profiles/new.scss
@@ -1,5 +1,5 @@
 .profile-starter {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: Raleway;
 }
 
 .profile-starter p {
