--- a/app/assets/stylesheets/recipes/show.scss
+++ b/app/assets/stylesheets/recipes/show.scss
@@ -23,7 +23,7 @@
 }
 
 .recipe-container {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: Raleway;
   flex-basis: 50%;
   margin-top: 10px;
 }
@@ -74,24 +74,19 @@
   z-index: -1;
 }
 
-.data-directory {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+.input-directive {
+  font-family: Raleway;
   font-weight: 200;
+  padding: 30px 30px 0px 30px;
+  margin-top: 50px;
+  display: inline-block;
 }
 
-
-.instruction-toggle {
-    margin-left: 1%;
-}
-
-.ingredient-form {
-  // margin-top: 10%;
-}
 .submit {
   margin-top: 30px;
 }
 
-.recipe-content {
+.how-to {
   background-color: #DBECEF;
   font-style: normal;
   display: flex;
@@ -100,11 +95,12 @@
   list-style: none;
   text-align: left;
   margin-bottom: 0%;
+  margin-right: 50px
 }
 
 .recipe-ingredients {
   display: inline-block;
-  margin: 12px;
+  margin: 12px 12px 12px 32px;
   margin-top: 0px;
   float: left;
   width: 45%;
@@ -115,26 +111,39 @@
   list-style: none;
 }
 
-.recipe-ingredients submit {
+.new-ingredient, .new-instruction {
+  margin-bottom: 10px;
+}
 
+#text-line {
+    background-color: transparent;
+    color: black;
+    outline: none;
+    outline-style: none;
+    box-shadow: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid #006480 1px;
+    padding: 3px 10px;
 }
 
 .recipe-ingredients ul {
+  // background-color: #D9D9D9;
   font-size: 18px;
   font-weight: 200;
   list-style: none;
   padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: #D9D9D9;
-  padding-left: 10%;
+  // padding-bottom: 10px;
+  // padding-left: 10%;
   // margin-bottom: 20%;
   margin-left: 0px;
-  margin-right: 20%;
+  margin-right: 50%;
   text-align: justify;
 }
 
 .recipe-ingredients p {
-  // padding-left: 50%;
+  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 45px;
   line-height: 32px;
   font-weight: 100;
@@ -143,17 +152,15 @@
 }
 
 .recipe-ingredients li {
+  opacity: 0.76;
+  -webkit-font-smoothing: antialiased;
+  font-style: normal;
   padding: 0px;
   line-height: 20px;
 }
 
 .recipe-instructions {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  // margin-left: 45%;
-  // height: auto;
-  // margin: 12px;
-  // padding-top: 42px;
-  // width: 25%;
+  font-family: Raleway;
   display: inline-block;
   margin: 12px;
   margin-top: 0px;
@@ -162,19 +169,28 @@
   height: auto;
   text-align: justify;
   color: black;
-  align-items: center;
   list-style: none;
 }
 
-.instruction-list li {
+.ingredient-list {
+  background-color: #D9D9D9;
+  width: 470px;
+  font-style: normal;
+  float: left;
+  display: flex;
+  justify-content: space-around;
+  padding: 0;
+  list-style: none;
   text-align: left;
+  margin-bottom: 0%;
 }
 
 .recipe-instructions p {
+  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   margin-left: 3%;
   font-size: 45px;
   line-height: 32px;
-  font-weight: 100;
+  font-weight:lighter;
   margin-top: 60px;
   margin-bottom: 0px;
 }
@@ -183,7 +199,6 @@
   list-style: none;
   background-color: white;
   opacity: 0.80;
-  margin-bottom: 10px;
+  margin: 10px;
   text-align: left;
-  margin-top: 10px;
 }
