--- a/app/assets/stylesheets/welcome/show.scss
+++ b/app/assets/stylesheets/welcome/show.scss
@@ -14,6 +14,6 @@
 }
 
 .contact-links h4  {
- font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+ font-family: Raleway;
  font-weight: 200;
 }
