--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>plate.</title>
+    <title>what's cookin'</title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= csrf_meta_tags %>
