--- a/app/views/recipes/_recipe_form.html.erb
+++ b/app/views/recipes/_recipe_form.html.erb
@@ -28,9 +28,9 @@
           </div>
         </div>
       </div>
-    <br><br><br><br><br>
+    <br><br>
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="media">
         <%= f.label :photo, "Upload Photo File:"%><br>
         <%= f.file_field :photo %><br><br>
@@ -39,9 +39,9 @@
         <%= f.file_field :video %><br><br>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="save">
-    <%= f.submit "Add Custom Recipe"%><br><br>
+    <%= f.submit "Save"%><br><br>
   </div>
 <% end %>
