--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,9 +24,10 @@
  }
 
  .notice {
-   background-color: #D9D9D9;
+   background-color: #C6DCF0;
+   padding-left: 10px;
    line-height: 40px;
-   top: 0px;
+   margin-top: 0px;
  }
  .top-bar {
    margin: 0px;
@@ -44,6 +45,9 @@
      font-size: 17px;
      border: none;
      cursor: pointer;
+ }
+ h1 {
+   margin-top: 8%;
  }
 
  /* The container <div> - needed to position the dropdown content */
