--- a/app/assets/stylesheets/recipes/index.scss
+++ b/app/assets/stylesheets/recipes/index.scss
@@ -35,7 +35,7 @@ h1 {
   font-weight: 200;
 }
 .pagination p{
-  margin-left: 44%;
+  margin-left: 43%;
   font-family: Raleway;
   font-weight: 200;
   font-size: 20px
@@ -48,4 +48,4 @@ h1 {
   width: 20px;
 }
 
-.page-number:hover { transform: scale(3.1); }
+.page-number:hover a {transform: scale(3.1);}
