--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
    <nav class="top-bar" data-topbar role="navigation">
+     <%= link_to 'Contact', welcome_show_path %> |
      <% if user_signed_in? %>
        <%= link_to 'Home', root_path %> |
        <%= link_to 'Log out', destroy_user_session_path, method: :delete %> |
@@ -19,7 +20,7 @@
        <%= link_to 'Create a Profile', new_user_profile_path(current_user) %> |
      <% end %>
      <%= link_to 'Your Recipes', user_recipes_path(current_user)%> |
-     <%= link_to 'Add Custom Recipe', new_user_recipe_path(current_user)%> |
+     <%= link_to 'Add Recipe', new_user_recipe_path(current_user)%> |
       <div class="dropdown">
           <a class="dropbtn"><i class="fa fa-cogs"></i></a>
           <div class="dropdown-content">
