--- a/app/assets/stylesheets/welcome/index.scss
+++ b/app/assets/stylesheets/welcome/index.scss
@@ -8,7 +8,7 @@
 }
 
 body.welcome {
-  background: url(http://fabweb.org/wp-content/uploads/2015/08/kitchenghosts12.gif) no-repeat center center fixed;
+  background: url(https://fabweb.org/wp-content/uploads/2015/08/kitchenghosts12.gif) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
