--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,8 @@
 <body class="welcome container">
+  <div class="home-notice">
+    <p><%= notice %></p>
+    <p><%= alert %></p>
+  </div>
 <h1 class="greeting-header"><%= @greetings.sample %></h1>
 <div class="recipe-demo">
   <div class="user-list">
